# python-ai-assisted-dev-sample

./: .gitignore  README.md  pyproject.toml  sample-transactions.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: frontend-expert.agent.md  test-expert.agent.md
.github/agents/frontend-expert/: CONFIG.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md
.github/agents/test-expert/: CONFIG.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md
.github/instructions/: app.instructions.md  tests.instructions.md
.github/prompts/: implement-feature.prompt.md
.github/skills/tdd-python/: SKILL.md
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  inventory.py  web.py
tests/: test_cli.py  test_inventory.py  test_web.py
